fix: update swayidle - Show swaylock before turning off screen chore(waybar): remove module - Remove idle inhibitor module

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -46,7 +46,6 @@ tooltip label {
 #pulseaudio,
 #tray,
 #privacy,
-#idle_inhibitor,
 #scratchpad {
   color: @waybar-text;
   margin: 2px;
